--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.4.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -48,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "eslint": "^8.44.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
